--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% if signed_in? %>
+    <%= current_user.username %>
+    <%= button_to "Sign Out", session_url, :method => :delete %>
+  <% else %>
+    <a href="<%= new_session_url %>">Log In</a>
+    <a href="<%= new_user_url %>">Sign Up</a>
+  <% end %>
+
+  <%= render "layouts/errors" %>
 
 <%= yield %>
 
