--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SampleProjectProposalMaster</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <title>Zelp</title>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -16,6 +16,10 @@
   <% end %>
 
   <%= render "layouts/errors" %>
+
+<script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCu07gN3GAteWfi18MZ2_ceErgQi-E7DFE">
+</script>
 
 <%= yield %>
 
