Styled a little and added link to create restaurant.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -122,3 +122,12 @@ ul {
   font-weight: bold;
   font-size: 24px;
 }
+
+button {
+  display: block;
+  background: yellow;
+}
+
+a {
+  background: #6666CC;
+}
