--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,11 +75,19 @@ ul {
   list-style: none;
 }
 
+.body {
+  display: block;
+  width: 1200px;
+  margin: auto;
+  background: lightgray;
+}
+
 .map {
   display: block;
   width: 500px;
   height: 500px;
   margin: auto;
+  border: 1px solid black;
 }
 
 #content {
@@ -158,7 +166,7 @@ ul {
   border: 1px solid lightgray;
 }
 
-.restaurant-index-items-picture {
+.restaurant-index-items-image {
   width: 150px;
   height: 100px;
   float: left;
@@ -187,13 +195,20 @@ ul {
   display: block;
 }
 
+/* Restaurant */
+
+.restaurant-image {
+  width: 150px;
+  height: 100px;
+}
 
 
 /* Review */
 
 .review {
-  display: block;
-  width: 400px;
+  display: inline-block;
+  width: 600px;
+  height: auto;
   padding: 10px;
   margin: 5px;
   background: white;
@@ -203,6 +218,12 @@ ul {
   display: block;
   font-weight: bold;
   font-size: 24px;
+}
+
+.review-description {
+  width: 600px;
+  word-wrap: normal;
+  display: inline-block;
 }
 
 button {
