Displays error messages during user sign up.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -109,9 +109,9 @@ ul {
   background: #680000;
 }
 
-/* Search */
+/* Home */
 
-.search-body {
+.home-body {
   display: block;
   width: 1200px;
   background: white;
