Added most of Search.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -114,6 +114,7 @@ ul {
 .home-body {
   display: block;
   width: 1200px;
+  height: inherit;
   background: white;
   margin: auto;
   border: 1px solid lightgray;
