Finish multisearch and started tabs.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,6 +69,7 @@ input[type="submit"] {
 body {
   height: 100%;
   font-family: sans-serif;
+  /*background-image: url("http://www.hd-wallpapersdownload.com/upload/bulk-upload/background-image-for-pictures-hd-wallpaper.jpg")*/
 }
 
 ul {
