--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -4,7 +4,7 @@
   display: block;
   width: 1200px;
   height: inherit;
-  background: #4D505B;
+  /*background: #4D505B;*/
   opacity: .9;
   margin: auto;
   /*border: 1px solid lightgray;*/
