--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -65,9 +65,12 @@ input[type="submit"] {
 body {
   height: 100%;
   font-family: sans-serif;
-  /*background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3fjEy1SGEUM9PR1GEBWMUaPfMVR-iw3tNCTHjwj-T2TgXRNOOzQ");*/
-  background: #4D505B;
+  /*background: #4D505B;*/
+  /*background: white;*/
   background-size: 100%;
+  background: #eee;
+  /*background-image: url("http://static1.squarespace.com/static/51e0ad2ee4b0eadeb542cbe5/51edadb6e4b0cfede2169240/51edadbbe4b0a04095923777/1374531005699/dinner_background_widescreen_16X9.jpg");*/
+  /*background-size: auto 100%;*/
 }
 
 ul {
@@ -81,15 +84,7 @@ ul {
   background: lightgray;
 }
 
-.map {
-  display: block;
-  width: 500px;
-  height: 500px;
-  margin: auto;
-  border: 1px solid black;
-  float: right;
-  margin: 5px 5px 0 0;
-}
+
 
 #content {
   background: transparent;
@@ -115,8 +110,22 @@ button {
   background: yellow;
 }
 
-a {
-  background: #6666CC;
+.button {
+  /*background: #F4AC42;
+  border-radius: 15px;
+  padding: 1px;*/
+  /*background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);*/
+  /*-webkit-border-radius: 28;
+  -moz-border-radius: 28;*/
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  border-radius: 16px;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 5px 10px 5px 10px;
+  text-decoration: none;
 }
 
 input {
@@ -139,6 +148,13 @@ input {
 .hvr-grow:active {
   transform: scale(1.1);
 }
+
+.half {
+  height: inherit;
+  width: inherit;
+  background: white;
+}
+
 /*
 #4D505B
 #CF4858
