--- a/app/assets/stylesheets/restaurant_index.css
+++ b/app/assets/stylesheets/restaurant_index.css
@@ -5,22 +5,44 @@
   float: left;
 }
 
+/*
 .restaurant-index-item {
   font-size: 16px;
   display: block;
   margin: 10px;
   background-image: linear-gradient(to bottom, #CF4858, #CC1414);
+
   opacity: 2.5;
   height: 100px;
   width: 600px;
   border: 3px solid black;
-  /*-moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-  -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);*/
+  -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
+  -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
   box-shadow: 1px 2px 3px rgba(0,0,0,.5);
   border-radius: 15px;
   overflow: hidden;
   float: right;
+}*/
+
+.restaurant-index-item {
+  font-size: 16px;
+  display: block;
+  margin: 5px;
+  /*background-image: linear-gradient(to bottom, lightgray, gray);*/
+
+  height: 100px;
+  width: 600px;
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+  background: transparent;
+  /*-moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
+  -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);*/
+  box-shadow: 1px 2px 3px rgba(0,0,0,.5);
+  /*border-radius: 15px;*/
+  overflow: hidden;
+  float: right;
 }
+
 
 .restaurant-index-items-image {
   width: 150px;
