--- a/app/assets/stylesheets/map.css
+++ b/app/assets/stylesheets/map.css
@@ -7,5 +7,5 @@
   float: right;
   margin: 5px 5px 0 0;
   box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-  border-radius: 50px;
+  /*border-radius: 50px;*/
 }
