--- a/app/assets/stylesheets/review.css
+++ b/app/assets/stylesheets/review.css
@@ -1,5 +1,10 @@
 /* Review */
 
+.review-form {
+  padding-top: 20px;
+  border-top: 1px solid black;
+}
+
 .review-body {
   display: inline-block;
   width: 600px;
@@ -7,7 +12,6 @@
   padding-top: 10px;
   margin: 5px;
   background: white;
-
 }
 
 .review-title {
