Fixed some css and finished refactored rating to a new rating component.

--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -14,11 +14,17 @@
 	width: auto;
 	margin: 5px;
 }
-
+/*
 li input, li button {
 	display: block;
 	margin: auto;
+}*/
+
+.login-button, .login-input {
+	display: block;
+	margin: auto;
 }
+
 
 li input {
 	background: #eee;
