--- a/app/assets/stylesheets/review.css
+++ b/app/assets/stylesheets/review.css
@@ -47,3 +47,9 @@
   float: right;
   padding-right: 50px;
 }
+
+/*.review-form-components li {
+  display: block;
+  float: left;
+  width: 90%
+}*/
