--- a/app/assets/stylesheets/tab.css
+++ b/app/assets/stylesheets/tab.css
@@ -1,7 +1,66 @@
+
+.tabs-body {
+  display: block;
+  width: 850px;
+  float: left;
+  border: 1px solid #D0D0D0;
+}
+
+.tab-names {
+  float: left;
+  display: block;
+  width: 200px;
+  height: auto;
+  background: #eee;
+  /*border-left: 1px solid #D0D0D0;*/
+  /*margin: 5px;*/
+}
+
 .tab-name {
   display: block;
   float: left;
   width: 200px;
   text-align: center;
-  border: 1px solid black;
+  border-top: 1px solid #D0D0D0;
+  border-right: 1px solid #D0D0D0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #00004d;
+  cursor: pointer;
+}
+
+.tab-name:first-child {
+  border-top: none;
+}
+
+.tab-name:hover {
+  background: #787878;
+}
+
+.selected {
+  font-weight: bold;
+  border-right: none;
+  background: white;
+  cursor: default;
+}
+
+.selected a {
+  cursor: default;
+}
+
+.selected:hover {
+  background: white;
+}
+
+.selected:last-child {
+  /*border-bottom: 1px solid #D0D0D0;*/
+}
+
+.tab-contents {
+  float: left;
+  display: block;
+  width: 610px;
+  border-left: none;
+  background: white;
+  margin-left: 3px;
 }
