Fixed css file.

--- a/app/assets/stylesheets/rating.css
+++ b/app/assets/stylesheets/rating.css
@@ -52,7 +52,7 @@
 }
 
 
-.rating-0 {=
+.rating-0 {
   background: url("http://s3-media4.fl.yelpcdn.com/assets/srv0/yelp_styleguide/c2252a4cd43e/assets/img/stars/stars_map.png") 0 2px;
 }
 
@@ -76,7 +76,7 @@
   background: url("http://s3-media4.fl.yelpcdn.com/assets/srv0/yelp_styleguide/c2252a4cd43e/assets/img/stars/stars_map.png") 0 -91px;
 
 }
-.rating-3.5 {
+.rating-3\.5 {
   background: url("http://s3-media4.fl.yelpcdn.com/assets/srv0/yelp_styleguide/c2252a4cd43e/assets/img/stars/stars_map.png") 0 -908px;
 }
 
