Made site more responsive and made default location if user denies geolocation.

--- a/app/assets/stylesheets/navigation_bar.css
+++ b/app/assets/stylesheets/navigation_bar.css
@@ -3,7 +3,7 @@
 .nav {
   display: block;
   height: inherit;
-  width: 1400px;
+  min-width: 1250px;
   margin: auto;
   background: transparent;
   margin-bottom: 30px;
