--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -2,11 +2,13 @@
 
 .home-body {
   display: block;
-  width: 1380px;
-  height: inherit;
+  /*width: 90%;*/
+  width: 1250px;
+
   /*background: #4D505B;*/
   opacity: .9;
   margin: auto;
+  /*vertical-align: center;*/
   /*border: 1px solid lightgray;*/
 
 }
